# SimPL

./: .gitignore  Makefile  README.md  dune-project  planning.md  simpl.opam
lib/: ast.ml  eval.ml  lexer.mll  parse.ml  parser.mly  parseutil.ml  print.ml  typecheck.ml  types.ml  util.ml
src/: ast.ml  dune  lexer.mll  main.ml  parser.mly  types.ml
tests/: assign.spl  if.spl  skip.spl  while.spl
